--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 li {
-  list-style: none;
+  /* list-style: none; */
+}
+
+pre {
+  padding-left: 35px;
+  width: 500px;
+  white-space: normal;
+}
+
+button {
+  margin: 0 1px;
+}
+
+.button-group {
+  display: inline;
+  padding: 5px;
 }
